Fixed navbar coming off screen, title now white

--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -4,6 +4,8 @@
   height: 64px;
   width: auto;
   margin: 0 auto;
+  padding-left: -24px;
+  padding-right: -24px;
   
 }
 
