--- a/sass/common.scss
+++ b/sass/common.scss
@@ -17,7 +17,7 @@ body {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 24px;
+
 }
 
 img {
@@ -43,6 +43,7 @@ button:hover {
   display: block;
   text-align: center;
   justify-content: center;
+  color: white;
 }
 
 .image-details {
